--- a/baking.html
+++ b/baking.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Food Blog</title>
   </head>
-  <body>
+  <body class='hello'>
     <div id="root"></div>
   </body>
 </html>
